<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.hassannaqvi.leaps_scaleup.ui.activities.Form04_EF_D">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="com.example.hassannaqvi.leaps_scaleup.ui.activities.Form04_EF_D" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:animateLayoutChanges="true"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/ls04dsub1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryAlpha"
                android:padding="20dp"
                android:text="@string/ls04dainstruction"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.CardView style="@style/cardView">

                <LinearLayout style="@style/linerlayout_view">

                    <TextView
                        style="@style/textView"
                        android:text="@string/ls04da01" />

                    <RadioGroup
                        android:id="@+id/ls05b01a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/ls05b01a01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/correct" />

                        <RadioButton
                            android:id="@+id/ls05b01a02"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/incorrect" />

                        <RadioButton
                            android:id="@+id/ls05b01a99"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nores" />
                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:background="@color/colorPrimaryDark"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/ls02pe01heading"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="35sp" />-->

            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection"
                    android:textColor="@color/white" />
                <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview"
                    android:textColor="@color/white" />

                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>