<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.hassannaqvi.leaps_scaleup.ui.activities.Form04ChildEF">

<data>

    <import type="android.view.View" />

    <variable
        name="callback"
        type="com.example.hassannaqvi.leaps_scaleup.ui.activities.Form04ChildEF" />
</data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:animateLayoutChanges="true"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/ls02instruction"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:background="@color/colorPrimaryDark"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/ls02pe01heading"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="35sp" />-->

        <!--01-->
        <android.support.v7.widget.CardView
            android:id="@+id/fldgrplspe01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:text= "@string/ls02pe01a"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/ls02pe01a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/ls02pe01a01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/ls02pe01a02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:text="@string/no" />


                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>



        <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/green"
                android:onClick="@{() -> callback.BtnContinue()}"
                android:text="@string/nextSection"
                android:textColor="@color/white" />
            <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->

            <Button
                android:id="@+id/btn_End"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:onClick="@{() -> callback.BtnEnd()}"
                android:text="@string/end_interview"
                android:textColor="@color/white" />

            <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
        </LinearLayout>
    </LinearLayout>

</ScrollView>
</layout>
