<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.Form02HHActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="com.example.hassannaqvi.wfppishincr.ui.activities.Form02HHActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/ls01aheading"
            android:textSize="35sp" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:animateLayoutChanges="true"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:text="@string/ls01a02"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/ls01a02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/ls01a02"
                    android:inputType="text"
                    />



                <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> callback.BtnContinue()}"
                        android:text="@string/nextSection"
                        android:textColor="#1ed61e" />
                    <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->

                    <Button
                        android:id="@+id/btn_End"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> callback.BtnEnd()}"
                        android:text="@string/end_interview"
                        android:textColor="#ff1e1e" />

                    <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</layout>